Atcoder/ABC過去問/D/compiling_error.txt
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/D/D.cpp: In function 'int main()':
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/D/D.cpp:323:11: error: 'xy' was not declared in this scope; did you mean 'yy'?
  323 |     ll a=(xy-x*y)/(xx-x*x);
      |           ^~
      |           yy
